Fixed styles on mobile, added sidebar instead of regular menu

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -42,3 +42,25 @@
 .active .item {
     color: deepskyblue;
 }
+
+.regularNavbar {
+    display: flex;
+}
+
+.menuNavbar {
+    display: none;
+}
+
+.displayNone {
+    display: none;
+}
+
+@media screen and (max-width: 700px) {
+    .regularNavbar {
+        display: none;
+    }
+
+    .menuNavbar {
+        display: block;
+    }
+}
